--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: crdt_sync
 description: A dart-native turnkey solution for painless network synchronization
-version: 0.0.1+1
+version: 0.0.2
 repository: https://github.com/cachapa/crdt_sync
 
 environment:
