--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   source_span: ^1.9.1
-  sql_crdt: ^1.1.1
+  sql_crdt: ^1.1.1+1
 #    path: ../sql_crdt
   sqlparser: ^0.30.3
   web_socket_channel: ^2.4.0
@@ -18,6 +18,6 @@ dev_dependencies:
   test: any
 
   # Example
-  sqlite_crdt: any
-#    path: ../sqlite_crdt
+  sqlite_crdt: #any
+    path: ../sqlite_crdt
   uuid: any
